Improved Security Response and Global Exception Handling